Copy changes from gems2 to standalone ( TSolMod class, and other models) Added new files to projects s_fgl1.cpp, s_fgl3.cpp and s_fgl4.cpp Change all *.pro files and all Makefiles for Linux-GNU, Linux-PGI and CRAYXT3-catamount SD
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@288 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/GEMIPM2K/platform/CRAYXT3-catamount/Makefile
+++ b/GEMIPM2K/platform/CRAYXT3-catamount/Makefile
@@ -45,45 +45,53 @@ OBJECTS_DIR = obj/
 
 ####### Files
 
-HEADERS = array.h \
-		verror.h \
-		gstring.h \
-		gdatastream.h \
-		v_user.h \
-		s_fgl.h \
-		databr.h \
-		datach.h \
-		node.h \
-		ms_multi.h \
-		io_arrays.h \
-		m_const.h \
-		m_param.h \
-		num_methods.h \
-		tnt_i_refvec.h \
-		tnt_array1d.h \
-		tnt_array2d.h \
-		tnt.h \
-		jama_cholesky.h \
-		jama_lu.h
-SOURCES = gstring.cpp \
-		gdatastream.cpp \
-		s_fgl.cpp \
-		node.cpp \
-		node_format.cpp \
-		ms_multi_file.cpp \
-		ms_multi_format.cpp \
-		ipm_chemical.cpp \
-		ipm_chemical2.cpp \
-		ipm_chemical3.cpp \
-		ipm_main.cpp \
-		ipm_simplex.cpp \
-		io_arrays.cpp \
+HEADERS =  array.h \
+		 verror.h \
+		 gstring.h \
+		 gdatastream.h \
+		 v_user.h \
+		 s_fgl.h \
+		 databr.h \
+		 datach.h \
+		 node.h \
+		 ms_multi.h \
+		 io_arrays.h \
+		 m_const.h \
+		 m_param.h \
+		 num_methods.h \
+		 tnt_i_refvec.h \
+		 tnt_array1d.h \
+		 tnt_array2d.h \
+		 tnt.h \
+		 jama_cholesky.h \
+		 jama_lu.h
+SOURCES =  gstring.cpp \
+		 gdatastream.cpp \
+		 s_fgl.cpp \
+		 s_fgl1.cpp \
+		 s_fgl2.cpp \
+		 s_fgl3.cpp \
+		 s_fgl4.cpp \
+		 node.cpp \
+		 node_format.cpp \
+		 ms_multi_file.cpp \
+		 ms_multi_format.cpp \
+		 ipm_chemical.cpp \
+		 ipm_chemical2.cpp \
+		 ipm_chemical3.cpp \
+		 ipm_main.cpp \
+		 ipm_simplex.cpp \
+		 io_arrays.cpp \
 		main.cpp \
-		ms_param.cpp \
-		num_methods.cpp
+		 ms_param.cpp \
+		 num_methods.cpp
 OBJECTS = obj/gstring.o \
 		obj/gdatastream.o \
 		obj/s_fgl.o \
+		obj/s_fgl1.o \
+		obj/s_fgl2.o \
+		obj/s_fgl3.o \
+		obj/s_fgl4.o \
 		obj/node.o \
 		obj/node_format.o \
 		obj/ms_multi_file.o \
@@ -102,7 +110,7 @@ UICDECLS =
 UICIMPLS = 
 SRCMOC   = 
 OBJMOC = 
-DIST	   = gem_node-sep.pro
+DIST	   = node-gem-sep.pro
 QMAKE_TARGET = gemnode
 DESTDIR  = 
 TARGET   = gemnode
@@ -140,10 +148,6 @@ uicables: $(UICDECLS) $(UICIMPLS)
 $(MOC): 
 	( cd $(QTDIR)/src/moc && $(MAKE) )
 
-Makefile: gem_node-sep.pro   
-	$(QMAKE) -o Makefile gem_node-sep.pro
-qmake: 
-	@$(QMAKE) -o Makefile gem_node-sep.pro
 
 dist: 
 	@mkdir -p obj/gemnode && $(COPY_FILE) --parents $(SOURCES) $(HEADERS) $(FORMS) $(DIST) obj/gemnode/ && ( cd `dirname obj/gemnode` && $(TAR) gemnode.tar gemnode && $(GZIP) gemnode.tar ) && $(MOVE) `dirname obj/gemnode`/gemnode.tar.gz . && $(DEL_FILE) -r obj/gemnode
@@ -168,175 +172,215 @@ FORCE:
 
 ####### Compile
 
-obj/gstring.o: gstring.cpp gstring.h \
-		array.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gstring.o gstring.cpp
+obj/gstring.o:  gstring.cpp  gstring.h \
+		 v_user.h \
+		 array.h \
+		 verror.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gstring.o  gstring.cpp
 
-obj/gdatastream.o: gdatastream.cpp gdatastream.h \
-		verror.h \
-		gstring.h \
-		array.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gdatastream.o gdatastream.cpp
+obj/gdatastream.o:  gdatastream.cpp  gdatastream.h \
+		 verror.h \
+		 gstring.h \
+		 array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gdatastream.o  gdatastream.cpp
 
-obj/s_fgl.o: s_fgl.cpp s_fgl.h \
-		m_const.h \
-		verror.h \
-		v_user.h \
-		gstring.h \
-		array.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o s_fgl.cpp
+obj/s_fgl.o:  s_fgl.cpp  s_fgl.h \
+		 verror.h \
+		 m_const.h \
+		 gstring.h \
+		 array.h \
+		 v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o  s_fgl.cpp
 
-obj/node.o: node.cpp node.h \
-		gdatastream.h \
-		m_param.h \
-		datach.h \
-		databr.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node.o node.cpp
+obj/s_fgl1.o:  s_fgl1.cpp  verror.h \
+		 s_fgl.h \
+		 gstring.h \
+		 array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl1.o  s_fgl1.cpp
 
-obj/node_format.o: node_format.cpp io_arrays.h \
-		node.h \
-		gdatastream.h \
-		m_param.h \
-		datach.h \
-		databr.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node_format.o node_format.cpp
+obj/s_fgl2.o:  s_fgl2.cpp  s_fgl.h \
+		 m_const.h \
+		 verror.h \
+		 v_user.h \
+		 gstring.h \
+		 array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl2.o  s_fgl2.cpp
 
-obj/ms_multi_file.o: ms_multi_file.cpp io_arrays.h \
-		m_param.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_multi_file.o ms_multi_file.cpp
+obj/s_fgl3.o:  s_fgl3.cpp  verror.h \
+		 s_fgl.h \
+		 gstring.h \
+		 array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl3.o  s_fgl3.cpp
 
-obj/ms_multi_format.o: ms_multi_format.cpp io_arrays.h \
-		m_param.h \
-		node.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h \
-		datach.h \
-		databr.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_multi_format.o ms_multi_format.cpp
+obj/s_fgl4.o:  s_fgl4.cpp  verror.h \
+		 s_fgl.h \
+		 gstring.h \
+		 array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl4.o  s_fgl4.cpp
 
-obj/ipm_chemical.o: ipm_chemical.cpp m_param.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical.o ipm_chemical.cpp
+obj/node.o:  node.cpp  node.h \
+		 gdatastream.h \
+		 num_methods.h \
+		 m_param.h \
+		 datach.h \
+		 databr.h \
+		 ms_multi.h \
+		 verror.h \
+		 gstring.h \
+		 array.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node.o  node.cpp
 
-obj/ipm_chemical2.o: ipm_chemical2.cpp m_param.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical2.o ipm_chemical2.cpp
+obj/node_format.o:  node_format.cpp  io_arrays.h \
+		 node.h \
+		 gdatastream.h \
+		 gstring.h \
+		 array.h \
+		 m_param.h \
+		 datach.h \
+		 databr.h \
+		 ms_multi.h \
+		 verror.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node_format.o  node_format.cpp
 
-obj/ipm_chemical3.o: ipm_chemical3.cpp m_param.h \
-		s_fgl.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical3.o ipm_chemical3.cpp
+obj/ms_multi_file.o:  ms_multi_file.cpp  io_arrays.h \
+		 m_param.h \
+		 gdatastream.h \
+		 gstring.h \
+		 array.h \
+		 ms_multi.h \
+		 verror.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_multi_file.o  ms_multi_file.cpp
 
-obj/ipm_main.o: ipm_main.cpp m_param.h \
-		jama_lu.h \
-		jama_cholesky.h \
-		node.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h \
-		tnt.h \
-		tnt_array1d.h \
-		tnt_array2d.h \
-		tnt_i_refvec.h \
-		datach.h \
-		databr.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_main.o ipm_main.cpp
+obj/ms_multi_format.o:  ms_multi_format.cpp  io_arrays.h \
+		 m_param.h \
+		 node.h \
+		 gstring.h \
+		 array.h \
+		 gdatastream.h \
+		 ms_multi.h \
+		 verror.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h \
+		 datach.h \
+		 databr.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_multi_format.o  ms_multi_format.cpp
 
-obj/ipm_simplex.o: ipm_simplex.cpp m_param.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_simplex.o ipm_simplex.cpp
+obj/ipm_chemical.o:  ipm_chemical.cpp  m_param.h \
+		 gdatastream.h \
+		 ms_multi.h \
+		 verror.h \
+		 gstring.h \
+		 array.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical.o  ipm_chemical.cpp
 
-obj/io_arrays.o: io_arrays.cpp io_arrays.h \
-		verror.h \
-		gstring.h \
-		array.h 
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/io_arrays.o io_arrays.cpp
+obj/ipm_chemical2.o:  ipm_chemical2.cpp  m_param.h \
+		 gdatastream.h \
+		 ms_multi.h \
+		 verror.h \
+		 gstring.h \
+		 array.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical2.o  ipm_chemical2.cpp
 
-obj/main.o: main.cpp node.h \
-		m_param.h \
-		datach.h \
-		databr.h \
-		gdatastream.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h
+obj/ipm_chemical3.o:  ipm_chemical3.cpp  m_param.h \
+		 s_fgl.h \
+		 gdatastream.h \
+		 ms_multi.h \
+		 verror.h \
+		 gstring.h \
+		 array.h \
+		 m_const.h \
+		 v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical3.o  ipm_chemical3.cpp
+
+obj/ipm_main.o:  ipm_main.cpp  m_param.h \
+		 jama_lu.h \
+		 jama_cholesky.h \
+		 node.h \
+		 gdatastream.h \
+		 ms_multi.h \
+		 verror.h \
+		 gstring.h \
+		 array.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h \
+		 tnt.h \
+		 tnt_array1d.h \
+		 tnt_array2d.h \
+		 tnt_i_refvec.h \
+		 datach.h \
+		 databr.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_main.o  ipm_main.cpp
+
+obj/ipm_simplex.o:  ipm_simplex.cpp  m_param.h \
+		 gdatastream.h \
+		 ms_multi.h \
+		 verror.h \
+		 gstring.h \
+		 array.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_simplex.o  ipm_simplex.cpp
+
+obj/io_arrays.o:  io_arrays.cpp  io_arrays.h \
+		 verror.h \
+		 v_user.h \
+		 gstring.h \
+		 array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/io_arrays.o  io_arrays.cpp
+
+obj/main.o: main.cpp  node.h \
+		 m_param.h \
+		 datach.h \
+		 databr.h \
+		 gdatastream.h \
+		 ms_multi.h \
+		 verror.h \
+		 gstring.h \
+		 array.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/main.o main.cpp
 
-obj/ms_param.o: ms_param.cpp m_param.h \
-		num_methods.h \
-		gdatastream.h \
-		node.h \
-		ms_multi.h \
-		verror.h \
-		gstring.h \
-		array.h \
-		m_const.h \
-		v_user.h \
-		datach.h \
-		databr.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_param.o ms_param.cpp
+obj/ms_param.o:  ms_param.cpp  m_param.h \
+		 num_methods.h \
+		 gdatastream.h \
+		 node.h \
+		 ms_multi.h \
+		 verror.h \
+		 gstring.h \
+		 array.h \
+		 m_const.h \
+		 s_fgl.h \
+		 v_user.h \
+		 datach.h \
+		 databr.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_param.o  ms_param.cpp
 
-obj/num_methods.o: num_methods.cpp v_user.h \
-		num_methods.h \
-		verror.h \
-		gstring.h \
-		array.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/num_methods.o num_methods.cpp
+obj/num_methods.o:  num_methods.cpp  v_user.h \
+		 num_methods.h \
+		 verror.h \
+		 gstring.h \
+		 array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/num_methods.o  num_methods.cpp
 
 ####### Install
 
