--- a/GEMIPM2K/platform/other/Makefile
+++ b/GEMIPM2K/platform/other/Makefile
@@ -55,6 +55,7 @@ HEADERS = array.h \
 		datach.h \
 		node.h \
 		ms_multi.h \
+		io_arrays.h \
 		m_const.h \
 		m_param.h \
 		num_methods.h \
@@ -67,6 +68,10 @@ HEADERS = array.h \
 SOURCES = gstring.cpp \
 		gdatastream.cpp \
 		s_fgl.cpp \
+		s_fgl1.cpp \
+		s_fgl2.cpp \
+		s_fgl3.cpp \
+		s_fgl4.cpp \
 		node.cpp \
 		node_format.cpp \
 		ms_multi_file.cpp \
@@ -76,12 +81,17 @@ SOURCES = gstring.cpp \
 		ipm_chemical3.cpp \
 		ipm_main.cpp \
 		ipm_simplex.cpp \
+		io_arrays.cpp \
 		main.cpp \
 		ms_param.cpp \
 		num_methods.cpp
 OBJECTS = obj/gstring.o \
 		obj/gdatastream.o \
 		obj/s_fgl.o \
+		obj/s_fgl1.o \
+		obj/s_fgl2.o \
+		obj/s_fgl3.o \
+		obj/s_fgl4.o \
 		obj/node.o \
 		obj/node_format.o \
 		obj/ms_multi_file.o \
@@ -91,18 +101,14 @@ OBJECTS = obj/gstring.o \
 		obj/ipm_chemical3.o \
 		obj/ipm_main.o \
 		obj/ipm_simplex.o \
+		obj/io_arrays.o \
 		obj/main.o \
 		obj/ms_param.o \
 		obj/num_methods.o
-FORMS = 
-UICDECLS = 
-UICIMPLS = 
-SRCMOC   = 
-OBJMOC = 
-DIST	   = gem_node-sep.pro
-QMAKE_TARGET = gemnode
+
+
 DESTDIR  = 
-TARGET   = gemnode
+TARGET   = gemcalc
 
 first: all
 ####### Implicit rules
@@ -128,28 +134,10 @@ first: all
 
 all: Makefile $(TARGET)
 
-$(TARGET):  $(UICDECLS) $(OBJECTS) $(OBJMOC)  
-	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJMOC) $(OBJCOMP) $(LIBS)
+$(TARGET):  $(OBJECTS)  
+	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS)  $(OBJCOMP) $(LIBS)
 
-mocables: $(SRCMOC)
-uicables: $(UICDECLS) $(UICIMPLS)
 
-$(MOC): 
-	( cd $(QTDIR)/src/moc && $(MAKE) )
-
-Makefile: gem_node-sep.pro   
-	$(QMAKE) -o Makefile gem_node-sep.pro
-qmake: 
-	@$(QMAKE) -o Makefile gem_node-sep.pro
-
-dist: 
-	@mkdir -p obj/gemnode && $(COPY_FILE) --parents $(SOURCES) $(HEADERS) $(FORMS) $(DIST) obj/gemnode/ && ( cd `dirname obj/gemnode` && $(TAR) gemnode.tar gemnode && $(GZIP) gemnode.tar ) && $(MOVE) `dirname obj/gemnode`/gemnode.tar.gz . && $(DEL_FILE) -r obj/gemnode
-
-mocclean:
-uiclean:
-
-yaccclean:
-lexclean:
 clean:
 	-$(DEL_FILE) $(OBJECTS)
 	-$(DEL_FILE) *~ core *.core
@@ -158,7 +146,7 @@ clean:
 ####### Sub-libraries
 
 distclean: clean
-	-$(DEL_FILE) $(TARGET) $(TARGET)
+	-$(DEL_FILE) $(TARGET)
 
 
 FORCE:
@@ -166,7 +154,9 @@ FORCE:
 ####### Compile
 
 obj/gstring.o: gstring.cpp gstring.h \
-		array.h
+		v_user.h \
+		array.h \
+		verror.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gstring.o gstring.cpp
 
 obj/gdatastream.o: gdatastream.cpp gdatastream.h \
@@ -176,15 +166,42 @@ obj/gdatastream.o: gdatastream.cpp gdatastream.h \
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gdatastream.o gdatastream.cpp
 
 obj/s_fgl.o: s_fgl.cpp s_fgl.h \
+		verror.h \
+		m_const.h \
+		gstring.h \
+		array.h \
+		v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o s_fgl.cpp
+
+obj/s_fgl1.o: s_fgl1.cpp verror.h \
+		s_fgl.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl1.o s_fgl1.cpp
+
+obj/s_fgl2.o: s_fgl2.cpp s_fgl.h \
 		m_const.h \
 		verror.h \
 		v_user.h \
 		gstring.h \
 		array.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o s_fgl.cpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl2.o s_fgl2.cpp
+
+obj/s_fgl3.o: s_fgl3.cpp verror.h \
+		s_fgl.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl3.o s_fgl3.cpp
+
+obj/s_fgl4.o: s_fgl4.cpp verror.h \
+		s_fgl.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl4.o s_fgl4.cpp
 
 obj/node.o: node.cpp node.h \
 		gdatastream.h \
+		num_methods.h \
 		m_param.h \
 		datach.h \
 		databr.h \
@@ -193,40 +210,47 @@ obj/node.o: node.cpp node.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node.o node.cpp
 
-obj/node_format.o: node_format.cpp node.h \
+obj/node_format.o: node_format.cpp io_arrays.h \
+		node.h \
 		gdatastream.h \
+		gstring.h \
+		array.h \
 		m_param.h \
 		datach.h \
 		databr.h \
 		ms_multi.h \
 		verror.h \
-		gstring.h \
-		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node_format.o node_format.cpp
 
-obj/ms_multi_file.o: ms_multi_file.cpp m_param.h \
+obj/ms_multi_file.o: ms_multi_file.cpp io_arrays.h \
+		m_param.h \
 		gdatastream.h \
-		ms_multi.h \
-		verror.h \
 		gstring.h \
 		array.h \
+		ms_multi.h \
+		verror.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_multi_file.o ms_multi_file.cpp
 
-obj/ms_multi_format.o: ms_multi_format.cpp m_param.h \
+obj/ms_multi_format.o: ms_multi_format.cpp io_arrays.h \
+		m_param.h \
 		node.h \
+		gstring.h \
+		array.h \
 		gdatastream.h \
 		ms_multi.h \
 		verror.h \
-		gstring.h \
-		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h \
 		datach.h \
 		databr.h
@@ -239,6 +263,7 @@ obj/ipm_chemical.o: ipm_chemical.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical.o ipm_chemical.cpp
 
@@ -249,6 +274,7 @@ obj/ipm_chemical2.o: ipm_chemical2.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical2.o ipm_chemical2.cpp
 
@@ -273,6 +299,7 @@ obj/ipm_main.o: ipm_main.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h \
 		tnt.h \
 		tnt_array1d.h \
@@ -289,8 +316,16 @@ obj/ipm_simplex.o: ipm_simplex.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_simplex.o ipm_simplex.cpp
+
+obj/io_arrays.o: io_arrays.cpp io_arrays.h \
+		verror.h \
+		v_user.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/io_arrays.o io_arrays.cpp
 
 obj/main.o: main.cpp node.h \
 		m_param.h \
@@ -302,6 +337,7 @@ obj/main.o: main.cpp node.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/main.o main.cpp
 
@@ -314,6 +350,7 @@ obj/ms_param.o: ms_param.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h \
 		datach.h \
 		databr.h
