--- a/GEMIPM2K/platform/Linux-PGI/Makefile
+++ b/GEMIPM2K/platform/Linux-PGI/Makefile
@@ -61,7 +61,10 @@ HEADERS = array.h \
 SOURCES = gstring.cpp \
 		gdatastream.cpp \
 		s_fgl.cpp \
+		s_fgl1.cpp \
 		s_fgl2.cpp \
+		s_fgl3.cpp \
+		s_fgl4.cpp \
 		node.cpp \
 		node_format.cpp \
 		ms_multi_file.cpp \
@@ -78,7 +81,10 @@ SOURCES = gstring.cpp \
 OBJECTS = obj/gstring.o \
 		obj/gdatastream.o \
 		obj/s_fgl.o \
+		obj/s_fgl1.o \
 		obj/s_fgl2.o \
+		obj/s_fgl3.o \
+		obj/s_fgl4.o \
 		obj/node.o \
 		obj/node_format.o \
 		obj/ms_multi_file.o \
@@ -92,6 +98,8 @@ OBJECTS = obj/gstring.o \
 		obj/main.o \
 		obj/ms_param.o \
 		obj/num_methods.o
+
+
 DESTDIR  = 
 TARGET   = gemcalc
 
@@ -120,7 +128,8 @@ first: all
 all: Makefile $(TARGET)
 
 $(TARGET):  $(OBJECTS)  
-	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
+	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS)  $(OBJCOMP) $(LIBS)
+
 
 clean:
 	-$(DEL_FILE) $(OBJECTS)
@@ -132,12 +141,15 @@ clean:
 distclean: clean
 	-$(DEL_FILE) $(TARGET)
 
+
 FORCE:
 
 ####### Compile
 
 obj/gstring.o: gstring.cpp gstring.h \
-		array.h
+		v_user.h \
+		array.h \
+		verror.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gstring.o gstring.cpp
 
 obj/gdatastream.o: gdatastream.cpp gdatastream.h \
@@ -147,12 +159,18 @@ obj/gdatastream.o: gdatastream.cpp gdatastream.h \
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gdatastream.o gdatastream.cpp
 
 obj/s_fgl.o: s_fgl.cpp s_fgl.h \
-		m_const.h \
 		verror.h \
-		v_user.h \
+		m_const.h \
+		gstring.h \
+		array.h \
+		v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o s_fgl.cpp
+
+obj/s_fgl1.o: s_fgl1.cpp verror.h \
+		s_fgl.h \
 		gstring.h \
 		array.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o s_fgl.cpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl1.o s_fgl1.cpp
 
 obj/s_fgl2.o: s_fgl2.cpp s_fgl.h \
 		m_const.h \
@@ -162,8 +180,21 @@ obj/s_fgl2.o: s_fgl2.cpp s_fgl.h \
 		array.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl2.o s_fgl2.cpp
 
+obj/s_fgl3.o: s_fgl3.cpp verror.h \
+		s_fgl.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl3.o s_fgl3.cpp
+
+obj/s_fgl4.o: s_fgl4.cpp verror.h \
+		s_fgl.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl4.o s_fgl4.cpp
+
 obj/node.o: node.cpp node.h \
 		gdatastream.h \
+		num_methods.h \
 		m_param.h \
 		datach.h \
 		databr.h \
@@ -172,43 +203,47 @@ obj/node.o: node.cpp node.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node.o node.cpp
 
 obj/node_format.o: node_format.cpp io_arrays.h \
 		node.h \
 		gdatastream.h \
+		gstring.h \
+		array.h \
 		m_param.h \
 		datach.h \
 		databr.h \
 		ms_multi.h \
 		verror.h \
-		gstring.h \
-		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node_format.o node_format.cpp
 
 obj/ms_multi_file.o: ms_multi_file.cpp io_arrays.h \
 		m_param.h \
 		gdatastream.h \
-		ms_multi.h \
-		verror.h \
 		gstring.h \
 		array.h \
+		ms_multi.h \
+		verror.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_multi_file.o ms_multi_file.cpp
 
 obj/ms_multi_format.o: ms_multi_format.cpp io_arrays.h \
 		m_param.h \
 		node.h \
+		gstring.h \
+		array.h \
 		gdatastream.h \
 		ms_multi.h \
 		verror.h \
-		gstring.h \
-		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h \
 		datach.h \
 		databr.h
@@ -221,6 +256,7 @@ obj/ipm_chemical.o: ipm_chemical.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical.o ipm_chemical.cpp
 
@@ -231,6 +267,7 @@ obj/ipm_chemical2.o: ipm_chemical2.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical2.o ipm_chemical2.cpp
 
@@ -255,6 +292,7 @@ obj/ipm_main.o: ipm_main.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h \
 		tnt.h \
 		tnt_array1d.h \
@@ -271,13 +309,15 @@ obj/ipm_simplex.o: ipm_simplex.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_simplex.o ipm_simplex.cpp
 
 obj/io_arrays.o: io_arrays.cpp io_arrays.h \
 		verror.h \
+		v_user.h \
 		gstring.h \
-		array.h 
+		array.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/io_arrays.o io_arrays.cpp
 
 obj/main.o: main.cpp node.h \
@@ -290,6 +330,7 @@ obj/main.o: main.cpp node.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/main.o main.cpp
 
@@ -302,6 +343,7 @@ obj/ms_param.o: ms_param.cpp m_param.h \
 		gstring.h \
 		array.h \
 		m_const.h \
+		s_fgl.h \
 		v_user.h \
 		datach.h \
 		databr.h
