--- a/node-gem/Makefile
+++ b/node-gem/Makefile
@@ -65,7 +65,10 @@ HEADERS = ../GEMIPM2K/array.h \
 SOURCES = ../GEMIPM2K/gstring.cpp \
 		../GEMIPM2K/gdatastream.cpp \
 		../GEMIPM2K/s_fgl.cpp \
+		../GEMIPM2K/s_fgl1.cpp \
 		../GEMIPM2K/s_fgl2.cpp \
+		../GEMIPM2K/s_fgl3.cpp \
+		../GEMIPM2K/s_fgl4.cpp \
 		../GEMIPM2K/node.cpp \
 		../GEMIPM2K/node_format.cpp \
 		../GEMIPM2K/ms_multi_file.cpp \
@@ -82,7 +85,10 @@ SOURCES = ../GEMIPM2K/gstring.cpp \
 OBJECTS = obj/gstring.o \
 		obj/gdatastream.o \
 		obj/s_fgl.o \
+		obj/s_fgl1.o \
 		obj/s_fgl2.o \
+		obj/s_fgl3.o \
+		obj/s_fgl4.o \
 		obj/node.o \
 		obj/node_format.o \
 		obj/ms_multi_file.o \
@@ -159,12 +165,18 @@ obj/gdatastream.o: ../GEMIPM2K/gdatastream.cpp ../GEMIPM2K/gdatastream.h \
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/gdatastream.o ../GEMIPM2K/gdatastream.cpp
 
 obj/s_fgl.o: ../GEMIPM2K/s_fgl.cpp ../GEMIPM2K/s_fgl.h \
-		../GEMIPM2K/m_const.h \
 		../GEMIPM2K/verror.h \
-		../GEMIPM2K/v_user.h \
+		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/gstring.h \
+		../GEMIPM2K/array.h \
+		../GEMIPM2K/v_user.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o ../GEMIPM2K/s_fgl.cpp
+
+obj/s_fgl1.o: ../GEMIPM2K/s_fgl1.cpp ../GEMIPM2K/verror.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o ../GEMIPM2K/s_fgl.cpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl1.o ../GEMIPM2K/s_fgl1.cpp
 
 obj/s_fgl2.o: ../GEMIPM2K/s_fgl2.cpp ../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/m_const.h \
@@ -173,6 +185,18 @@ obj/s_fgl2.o: ../GEMIPM2K/s_fgl2.cpp ../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl2.o ../GEMIPM2K/s_fgl2.cpp
+
+obj/s_fgl3.o: ../GEMIPM2K/s_fgl3.cpp ../GEMIPM2K/verror.h \
+		../GEMIPM2K/s_fgl.h \
+		../GEMIPM2K/gstring.h \
+		../GEMIPM2K/array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl3.o ../GEMIPM2K/s_fgl3.cpp
+
+obj/s_fgl4.o: ../GEMIPM2K/s_fgl4.cpp ../GEMIPM2K/verror.h \
+		../GEMIPM2K/s_fgl.h \
+		../GEMIPM2K/gstring.h \
+		../GEMIPM2K/array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl4.o ../GEMIPM2K/s_fgl4.cpp
 
 obj/node.o: ../GEMIPM2K/node.cpp ../GEMIPM2K/node.h \
 		../GEMIPM2K/gdatastream.h \
@@ -185,6 +209,7 @@ obj/node.o: ../GEMIPM2K/node.cpp ../GEMIPM2K/node.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node.o ../GEMIPM2K/node.cpp
 
@@ -199,6 +224,7 @@ obj/node_format.o: ../GEMIPM2K/node_format.cpp ../GEMIPM2K/io_arrays.h \
 		../GEMIPM2K/ms_multi.h \
 		../GEMIPM2K/verror.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/node_format.o ../GEMIPM2K/node_format.cpp
 
@@ -210,6 +236,7 @@ obj/ms_multi_file.o: ../GEMIPM2K/ms_multi_file.cpp ../GEMIPM2K/io_arrays.h \
 		../GEMIPM2K/ms_multi.h \
 		../GEMIPM2K/verror.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ms_multi_file.o ../GEMIPM2K/ms_multi_file.cpp
 
@@ -222,6 +249,7 @@ obj/ms_multi_format.o: ../GEMIPM2K/ms_multi_format.cpp ../GEMIPM2K/io_arrays.h \
 		../GEMIPM2K/ms_multi.h \
 		../GEMIPM2K/verror.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h \
 		../GEMIPM2K/datach.h \
 		../GEMIPM2K/databr.h
@@ -234,6 +262,7 @@ obj/ipm_chemical.o: ../GEMIPM2K/ipm_chemical.cpp ../GEMIPM2K/m_param.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical.o ../GEMIPM2K/ipm_chemical.cpp
 
@@ -244,6 +273,7 @@ obj/ipm_chemical2.o: ../GEMIPM2K/ipm_chemical2.cpp ../GEMIPM2K/m_param.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_chemical2.o ../GEMIPM2K/ipm_chemical2.cpp
 
@@ -268,6 +298,7 @@ obj/ipm_main.o: ../GEMIPM2K/ipm_main.cpp ../GEMIPM2K/m_param.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h \
 		../GEMIPM2K/tnt.h \
 		../GEMIPM2K/tnt_array1d.h \
@@ -284,11 +315,13 @@ obj/ipm_simplex.o: ../GEMIPM2K/ipm_simplex.cpp ../GEMIPM2K/m_param.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/ipm_simplex.o ../GEMIPM2K/ipm_simplex.cpp
 
 obj/io_arrays.o: ../GEMIPM2K/io_arrays.cpp ../GEMIPM2K/io_arrays.h \
 		../GEMIPM2K/verror.h \
+		../GEMIPM2K/v_user.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/io_arrays.o ../GEMIPM2K/io_arrays.cpp
@@ -303,6 +336,7 @@ obj/main.o: main.cpp ../GEMIPM2K/node.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/main.o main.cpp
 
@@ -315,6 +349,7 @@ obj/ms_param.o: ../GEMIPM2K/ms_param.cpp ../GEMIPM2K/m_param.h \
 		../GEMIPM2K/gstring.h \
 		../GEMIPM2K/array.h \
 		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/s_fgl.h \
 		../GEMIPM2K/v_user.h \
 		../GEMIPM2K/datach.h \
 		../GEMIPM2K/databr.h
