--- a/GEMIPM2K/Makefile.MinGW
+++ b/GEMIPM2K/Makefile.MinGW
@@ -75,7 +75,10 @@ HEADERS = array.h \
 SOURCES = gstring.cpp \
 		gdatastream.cpp \
 		s_fgl.cpp \
-		s_fgl2.cpp \
+		s_fgl1.cpp \
+	    s_fgl2.cpp \
+		s_fgl3.cpp \
+		s_fgl4.cpp \
 		node.cpp \
 		node_format.cpp \
 		ms_multi_file.cpp \
@@ -92,7 +95,10 @@ SOURCES = gstring.cpp \
 OBJECTS = obj/gstring.o \
 		obj/gdatastream.o \
 		obj/s_fgl.o \
+		obj/s_fgl1.o \
 		obj/s_fgl2.o \
+		obj/s_fgl3.o \
+		obj/s_fgl4.o \
 		obj/node.o \
 		obj/node_format.o \
 		obj/ms_multi_file.o \
@@ -144,7 +150,10 @@ clean:
 	-$(DEL_FILE) obj\gstring.o 
 	-$(DEL_FILE) obj\gdatastream.o 
 	-$(DEL_FILE) obj\s_fgl.o 
+	-$(DEL_FILE) obj\s_fgl1.o 
 	-$(DEL_FILE) obj\s_fgl2.o 
+	-$(DEL_FILE) obj\s_fgl3.o
+	-$(DEL_FILE) obj\s_fgl4.o  
 	-$(DEL_FILE) obj\node.o 
 	-$(DEL_FILE) obj\node_format.o 
 	-$(DEL_FILE) obj\ms_multi_file.o 
@@ -186,7 +195,15 @@ obj/s_fgl.o: s_fgl.cpp s_fgl.h \
 		gstring.h \
 		array.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl.o s_fgl.cpp
-
+	
+obj/s_fgl1.o: s_fgl1.cpp s_fgl.h \
+		m_const.h \
+		verror.h \
+		v_user.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl1.o s_fgl1.cpp
+	
 obj/s_fgl2.o: s_fgl2.cpp s_fgl.h \
 		m_const.h \
 		verror.h \
@@ -194,6 +211,22 @@ obj/s_fgl2.o: s_fgl2.cpp s_fgl.h \
 		gstring.h \
 		array.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl2.o s_fgl2.cpp
+
+obj/s_fgl3.o: s_fgl3.cpp s_fgl.h \
+		m_const.h \
+		verror.h \
+		v_user.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl3.o s_fgl3.cpp
+	
+obj/s_fgl4.o: s_fgl4.cpp s_fgl.h \
+		m_const.h \
+		verror.h \
+		v_user.h \
+		gstring.h \
+		array.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/s_fgl4.o s_fgl4.cpp
 
 obj/node.o: node.cpp node.h \
 		gdatastream.h \
